--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+body {
+  background: rgba(0, 0, 0, 1);
+  /* Keep the inherited background full size. */
+  background-attachment: fixed; 
+  background-size: cover;
+  /* display: grid; */
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
+.container {
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px);
+  border-radius: 10px;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ .list{
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px);
+  list-style: none;
+  margin: 5px;
+  height: 7vh;
+  padding: 10px;
+  font-weight: 700;
+  border-radius: 10px;
+ }
