--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: rgba(0, 0, 0, 1);
+  background:  url(https://images.unsplash.com/photo-1544306094-e2dcf9479da3) no-repeat;
   /* Keep the inherited background full size. */
   background-attachment: fixed; 
   background-size: cover;
@@ -14,6 +14,7 @@ body {
   background-color: rgba(255, 255, 255, .15);  
   backdrop-filter: blur(5px);
   border-radius: 10px;
+  /* overflow : auto; */
  }
 
  .list{
@@ -25,4 +26,8 @@ body {
   padding: 10px;
   font-weight: 700;
   border-radius: 10px;
+ }
+
+ .response{
+  font-size: larger;
  }
