--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,23 @@
 body {
-  background:  url(https://images.unsplash.com/photo-1544306094-e2dcf9479da3) no-repeat;
-  /* Keep the inherited background full size. */
-  background-attachment: fixed; 
+  background: url(https://images.unsplash.com/photo-1544306094-e2dcf9479da3)  no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   /* display: grid; */
   align-items: center;
   justify-content: center;
   height: 100%;
-
+  /* background-color: black; */
 }
 
 .container {
-  background-color: rgba(255, 255, 255, .15);  
+  background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(5px);
   border-radius: 10px;
   /* overflow : auto; */
- }
+}
 
- .list{
-  background-color: rgba(255, 255, 255, .15);  
+.list {
+  background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(5px);
   list-style: none;
   margin: 5px;
@@ -26,8 +25,35 @@ body {
   padding: 10px;
   font-weight: 700;
   border-radius: 10px;
- }
+}
 
- .response{
+.response {
   font-size: larger;
- }
+}
+
+/* ProgressBar.css */
+@keyframes fillProgress {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.progressBar {
+  border-radius: 10px;
+  width: 99%;
+  border: groove white;
+  overflow: hidden;
+  margin: auto;
+  bottom:0;
+}
+
+.progress {
+  border-radius: 8px;
+  width: 0;
+  height: 8px;
+  background-color: #fa1e4e;
+  animation: fillProgress 40s linear forwards;
+}
